All sections correctly responsive on small and medium screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,8 @@
 @tailwind utilities;
 
 #bodyContainer {
-  max-width: 1440px;
   margin: auto;
+  margin: 0;
   padding: 0;
-  background-color: #F399A5;
   scroll-behavior: smooth;
 }
